data processing function

--- a/python/data_processing.ipynb
+++ b/python/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
        "190  Calaveras   22434   22801       45235"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1686,78 +1686,74 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Hit Rate"
+    "# Data processing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_contraband = pd.read_csv('../data/ca_statewide.csv.zip', compression = 'zip')"
+    "path_data = \"../data/ca_cleaned.pkl\"\n",
+    "path_population = '../data/us_county.csv'\n",
+    "\n",
+    "def pre_process(path):\n",
+    "    df = pd.read_pickle(path, compression= \"gzip\")\n",
+    "    df[\"date\"] = pd.to_datetime(df[\"date\"])\n",
+    "    df[\"year\"] = df[\"date\"].dt.year\n",
+    "    df['county_name'] = df['county_name'].str[:-7]\n",
+    "    return df\n",
+    "\n",
+    "def count_year_one_state(df, object = 'ethnicity'):\n",
+    "    if object == 'ethnicity':\n",
+    "        count_year = df.groupby([\"year\", \"county_name\", \"subject_race\"]).count()[\"date\"]\n",
+    "        count_year = pd.DataFrame(count_year)\n",
+    "        count_year = count_year.rename(columns = {\"date\": \"nb_arrest\"})\n",
+    "        count_year = count_year.reset_index()\n",
+    "    else:\n",
+    "        count_year = df.groupby([\"year\", \"county_name\", \"subject_sex\"]).count()[\"date\"]\n",
+    "        count_year = pd.DataFrame(count_year)\n",
+    "        count_year = count_year.rename(columns = {\"date\": \"nb_arrest\"})\n",
+    "        count_year = count_year.reset_index()\n",
+    "        \n",
+    "    return count_year\n",
+    "\n",
+    "def load_population(state):\n",
+    "    population = pd.read_csv('../data/us_county.csv')\n",
+    "    population = population.query(\"state == state\")\n",
+    "    population.drop(['fips','female_percentage','long','lat','median_age','state_code','state'], axis = 1, inplace = True)\n",
+    "    population['county'] = population['county'].str[:-7]\n",
+    "    return population\n",
+    "\n",
+    "def relative_arrest_computation(df_state, population, object='ethnicity'):\n",
+    "    if(object == 'ethnicity'):\n",
+    "        relative_arrest = pd.merge(df_state, population, left_on = 'county_name', right_on = 'county').drop(['county'], axis = 1)\n",
+    "        relative_arrest['relative_arrest'] = relative_arrest['nb_arrest'] / relative_arrest['population']\n",
+    "    else:\n",
+    "        relative_arrest = pd.merge(df_state, population, left_on = 'county_name', right_on = 'county').drop(['county'], axis = 1)\n",
+    "        relative_arrest_female = relative_arrest.query(\"subject_sex == 'female'\")\n",
+    "        relative_arrest_female['relative_arrest'] = relative_arrest_female['nb_arrest'] / relative_arrest_female['female']\n",
+    "        relative_arrest_male = relative_arrest.query(\"subject_sex == 'male'\")\n",
+    "        relative_arrest_male['relative_arrest'] = relative_arrest_male['nb_arrest'] / relative_arrest_male['male']\n",
+    "        relative_arrest = pd.concat([relative_arrest_female, relative_arrest_male])<\n",
+    "\n",
+    "    return relative_arrest\n",
+    "\n",
+    "def create_df_one_year(path, state):\n",
+    "    df = pre_process(path)\n",
+    "    count_year_ethnicity = count_year_one_state(df)\n",
+    "    count_year_gender = count_year_one_state(df, object = 'gender')\n",
+    "    population = load_population(state)\n",
+    "    df_ethnicity = relative_arrest_computation(count_year_ethnicity, population)\n",
+    "    df_gender = relative_arrest_computation(count_year_gender, population, object='gender')\n",
+    "\n",
+    "    return df_ethnicity, df_gender"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([nan, True, False], dtype=object)"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_contraband.contraband_found.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_contraband_cleaned = df_contraband.dropna(subset=['contraband_found'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_contraband_cleaned[\"date\"] = pd.to_datetime(df_contraband_cleaned[\"date\"])\n",
-    "df_contraband_cleaned[\"year\"] = df_contraband_cleaned[\"date\"].dt.year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_contraband_cleaned['county_name'] = df_contraband_cleaned['county_name'].str[:-7]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_contraband_cleaned_ethnicity = df_contraband_cleaned.groupby(['year','county_name','subject_race'])['contraband_found'].value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1781,116 +1777,101 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>contraband_found</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>year</th>\n",
        "      <th>county_name</th>\n",
        "      <th>subject_race</th>\n",
-       "      <th>contraband_found</th>\n",
-       "      <th></th>\n",
+       "      <th>nb_arrest</th>\n",
+       "      <th>male</th>\n",
+       "      <th>female</th>\n",
+       "      <th>population</th>\n",
+       "      <th>relative_arrest</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">2009</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">Alameda</th>\n",
-       "      <th rowspan=\"2\" valign=\"top\">asian/pacific islander</th>\n",
-       "      <th>True</th>\n",
-       "      <td>4</td>\n",
+       "      <th>0</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Alameda</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>13886</td>\n",
+       "      <td>807171</td>\n",
+       "      <td>836529</td>\n",
+       "      <td>1643700</td>\n",
+       "      <td>0.008448</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>False</th>\n",
-       "      <td>3</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Alameda</td>\n",
+       "      <td>black</td>\n",
+       "      <td>20976</td>\n",
+       "      <td>807171</td>\n",
+       "      <td>836529</td>\n",
+       "      <td>1643700</td>\n",
+       "      <td>0.012761</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">black</th>\n",
-       "      <th>True</th>\n",
-       "      <td>34</td>\n",
+       "      <th>2</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Alameda</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>25689</td>\n",
+       "      <td>807171</td>\n",
+       "      <td>836529</td>\n",
+       "      <td>1643700</td>\n",
+       "      <td>0.015629</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>False</th>\n",
-       "      <td>11</td>\n",
+       "      <th>3</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Alameda</td>\n",
+       "      <td>other</td>\n",
+       "      <td>13071</td>\n",
+       "      <td>807171</td>\n",
+       "      <td>836529</td>\n",
+       "      <td>1643700</td>\n",
+       "      <td>0.007952</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>hispanic</th>\n",
-       "      <th>True</th>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">2016</th>\n",
-       "      <th rowspan=\"5\" valign=\"top\">Yolo</th>\n",
-       "      <th rowspan=\"2\" valign=\"top\">hispanic</th>\n",
-       "      <th>True</th>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>False</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>other</th>\n",
-       "      <th>False</th>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">white</th>\n",
-       "      <th>True</th>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>False</th>\n",
-       "      <td>1</td>\n",
+       "      <th>4</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Alameda</td>\n",
+       "      <td>white</td>\n",
+       "      <td>40816</td>\n",
+       "      <td>807171</td>\n",
+       "      <td>836529</td>\n",
+       "      <td>1643700</td>\n",
+       "      <td>0.024832</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3386 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                          contraband_found\n",
-       "year county_name subject_race           contraband_found                  \n",
-       "2009 Alameda     asian/pacific islander True                             4\n",
-       "                                        False                            3\n",
-       "                 black                  True                            34\n",
-       "                                        False                           11\n",
-       "                 hispanic               True                            24\n",
-       "...                                                                    ...\n",
-       "2016 Yolo        hispanic               True                             2\n",
-       "                                        False                            1\n",
-       "                 other                  False                            1\n",
-       "                 white                  True                             7\n",
-       "                                        False                            1\n",
+       "   year county_name            subject_race  nb_arrest    male  female  \\\n",
+       "0  2009     Alameda  asian/pacific islander      13886  807171  836529   \n",
+       "1  2009     Alameda                   black      20976  807171  836529   \n",
+       "2  2009     Alameda                hispanic      25689  807171  836529   \n",
+       "3  2009     Alameda                   other      13071  807171  836529   \n",
+       "4  2009     Alameda                   white      40816  807171  836529   \n",
        "\n",
-       "[3386 rows x 1 columns]"
+       "   population  relative_arrest  \n",
+       "0     1643700         0.008448  \n",
+       "1     1643700         0.012761  \n",
+       "2     1643700         0.015629  \n",
+       "3     1643700         0.007952  \n",
+       "4     1643700         0.024832  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t = pd.DataFrame(df_contraband_cleaned_ethnicity)\n",
-    "t"
+    "df_ethnicity, df_gender = create_df_one_year(\"../data/ca_cleaned.pkl\", 'California')\n",
+    "df_ethnicity.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
