added line chart

--- a/python/data_processing.ipynb
+++ b/python/data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1794,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1803,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1913,7 +1913,7 @@
        "4             True        other  summons  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1924,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1933,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1949,7 +1949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1960,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1969,7 +1969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1978,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1989,7 +1989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2005,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2124,7 +2124,7 @@
        "9  2010    ca                   white    2349253"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2141,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2260,7 +2260,7 @@
        "9  2010    tx                   other       3121"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2277,12 +2277,462 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "count_ethnicity_state = pd.concat([count_year_ethnicity_ca_state, count_year_ethnicity_tx_state]).reset_index(drop=True)\n",
     "count_ethnicity_state.to_csv('../data/count_ethnicity_state.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>state</th>\n",
+       "      <th>subject_race</th>\n",
+       "      <th>nb_arrest</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>163572</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>black</td>\n",
+       "      <td>199846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>798562</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>other</td>\n",
+       "      <td>164346</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>white</td>\n",
+       "      <td>1168017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>335803</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>black</td>\n",
+       "      <td>408498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>1620693</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>other</td>\n",
+       "      <td>346073</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>white</td>\n",
+       "      <td>2349253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>345834</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>black</td>\n",
+       "      <td>409839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>1627277</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>other</td>\n",
+       "      <td>368087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>white</td>\n",
+       "      <td>2295965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>318947</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>black</td>\n",
+       "      <td>369762</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>1504935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>other</td>\n",
+       "      <td>344776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>white</td>\n",
+       "      <td>2050504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>311347</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>black</td>\n",
+       "      <td>362797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>1462257</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>other</td>\n",
+       "      <td>342502</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>white</td>\n",
+       "      <td>1936698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>289549</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>black</td>\n",
+       "      <td>343189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>1407142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>other</td>\n",
+       "      <td>327345</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>white</td>\n",
+       "      <td>1768706</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>278019</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>black</td>\n",
+       "      <td>342075</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>1395639</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>other</td>\n",
+       "      <td>332220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>white</td>\n",
+       "      <td>1679190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>130637</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>black</td>\n",
+       "      <td>165961</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>683003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>other</td>\n",
+       "      <td>158577</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>ca</td>\n",
+       "      <td>white</td>\n",
+       "      <td>776090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>36460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>black</td>\n",
+       "      <td>236021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>748478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>other</td>\n",
+       "      <td>2763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>unknown</td>\n",
+       "      <td>70319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>white</td>\n",
+       "      <td>1347229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>asian/pacific islander</td>\n",
+       "      <td>39299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>black</td>\n",
+       "      <td>251355</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>hispanic</td>\n",
+       "      <td>780478</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>tx</td>\n",
+       "      <td>other</td>\n",
+       "      <td>3121</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    year state            subject_race  nb_arrest\n",
+       "0   2009    ca  asian/pacific islander     163572\n",
+       "1   2009    ca                   black     199846\n",
+       "2   2009    ca                hispanic     798562\n",
+       "3   2009    ca                   other     164346\n",
+       "4   2009    ca                   white    1168017\n",
+       "5   2010    ca  asian/pacific islander     335803\n",
+       "6   2010    ca                   black     408498\n",
+       "7   2010    ca                hispanic    1620693\n",
+       "8   2010    ca                   other     346073\n",
+       "9   2010    ca                   white    2349253\n",
+       "10  2011    ca  asian/pacific islander     345834\n",
+       "11  2011    ca                   black     409839\n",
+       "12  2011    ca                hispanic    1627277\n",
+       "13  2011    ca                   other     368087\n",
+       "14  2011    ca                   white    2295965\n",
+       "15  2012    ca  asian/pacific islander     318947\n",
+       "16  2012    ca                   black     369762\n",
+       "17  2012    ca                hispanic    1504935\n",
+       "18  2012    ca                   other     344776\n",
+       "19  2012    ca                   white    2050504\n",
+       "20  2013    ca  asian/pacific islander     311347\n",
+       "21  2013    ca                   black     362797\n",
+       "22  2013    ca                hispanic    1462257\n",
+       "23  2013    ca                   other     342502\n",
+       "24  2013    ca                   white    1936698\n",
+       "25  2014    ca  asian/pacific islander     289549\n",
+       "26  2014    ca                   black     343189\n",
+       "27  2014    ca                hispanic    1407142\n",
+       "28  2014    ca                   other     327345\n",
+       "29  2014    ca                   white    1768706\n",
+       "30  2015    ca  asian/pacific islander     278019\n",
+       "31  2015    ca                   black     342075\n",
+       "32  2015    ca                hispanic    1395639\n",
+       "33  2015    ca                   other     332220\n",
+       "34  2015    ca                   white    1679190\n",
+       "35  2016    ca  asian/pacific islander     130637\n",
+       "36  2016    ca                   black     165961\n",
+       "37  2016    ca                hispanic     683003\n",
+       "38  2016    ca                   other     158577\n",
+       "39  2016    ca                   white     776090\n",
+       "40  2009    tx  asian/pacific islander      36460\n",
+       "41  2009    tx                   black     236021\n",
+       "42  2009    tx                hispanic     748478\n",
+       "43  2009    tx                   other       2763\n",
+       "44  2009    tx                 unknown      70319\n",
+       "45  2009    tx                   white    1347229\n",
+       "46  2010    tx  asian/pacific islander      39299\n",
+       "47  2010    tx                   black     251355\n",
+       "48  2010    tx                hispanic     780478\n",
+       "49  2010    tx                   other       3121"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_ethnicity_state.head(50)"
    ]
   },
   {
