--- a/python/Hit_rate_data_processing.ipynb
+++ b/python/Hit_rate_data_processing.ipynb
@@ -13,36 +13,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/city/tx_austin.csv.zip', compression = 'zip')\n",
-    "df_searched = df.query(\"search_conducted == True\")\n",
-    "df_searched[\"date\"] = pd.to_datetime(df_searched[\"date\"])\n",
-    "df_searched[\"year\"] = df_searched[\"date\"].dt.year\n",
-    "df_searched_cleaned = df_searched[['year', 'subject_race', 'search_conducted', 'contraband_found']]"
+    "import glob\n",
+    "from os import path\n",
+    "def get_files_name(path_to_files):\n",
+    "    \"\"\"\n",
+    "    @Description: Get the names of all the files of the predefined format at \n",
+    "        the wanted path, whitout the format extension.\n",
+    "    @Inputs:\n",
+    "        path_to_files: String of the path to the files. (ex:Images/*.jpg)\n",
+    "    @Outputs:\n",
+    "        names: List of the names of all files satisfying \"path_to_files\".\n",
+    "    \"\"\"\n",
+    "    names = []\n",
+    "    for file in glob.glob(path_to_files):\n",
+    "        names.append(path.splitext(path.basename(file))[0])\n",
+    "    return names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2006, 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015, 2016],\n",
-       "      dtype=int64)"
+       "'oakland'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_searched_cleaned.year.unique()"
+    "label = get_files_name('../data/city/*.csv.zip')\n",
+    "city = label[0][3:-4]\n",
+    "county = label[0][0:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data(path):\n",
+    "    df = pd.read_pickle(path, compression= \"gzip\")\n",
+    "    df_searched = df.query(\"search_conducted == True\")\n",
+    "    df_searched[\"date\"] = pd.to_datetime(df_searched[\"date\"])\n",
+    "    df_searched[\"year\"] = df_searched[\"date\"].dt.year\n",
+    "    df_searched['county_name'] = df_searched['county_name'].str[:-7]\n",
+    "    return df\n",
+    "\n",
+    "def compute_hit_rate_one_object(df, county, city, object = 'ethnicity'):    \n",
+    "    if object == 'ethnicity':\n",
+    "        df_searched_cleaned = df[['year', 'subject_race', 'search_conducted', 'contraband_found']]\n",
+    "        found = pd.DataFrame(df_searched_cleaned.groupby(['year', 'subject_race'])['contraband_found'].value_counts()).rename(columns={'contraband_found' : 'nb_find'}).reset_index()\n",
+    "        all = pd.DataFrame(df_searched_cleaned.groupby(['year', 'subject_race'])['search_conducted'].value_counts()).rename(columns={'search_conducted' : 'nb_search'}).reset_index()\n",
+    "        found_and_all = pd.merge(left = found, right = all, left_on=['year','subject_race'], right_on = ['year', 'subject_race']).drop(['search_conducted'], axis = 1)\n",
+    "        found_and_all['Hit_rate'] = found_and_all['nb_find'] / found_and_all['nb_search'] * 100\n",
+    "        found_and_all['County'] = county\n",
+    "        found_and_all['City'] = city\n",
+    "    else :\n",
+    "        df_searched_cleaned = df[['year', 'subject_sex', 'search_conducted', 'contraband_found']]\n",
+    "        found = pd.DataFrame(df_searched_cleaned.groupby(['year', 'subject_sex'])['contraband_found'].value_counts()).rename(columns={'contraband_found' : 'nb_find'}).reset_index()\n",
+    "        all = pd.DataFrame(df_searched_cleaned.groupby(['year', 'subject_sex'])['search_conducted'].value_counts()).rename(columns={'search_conducted' : 'nb_search'}).reset_index()\n",
+    "        found_and_all = pd.merge(left = found, right = all, left_on=['year','subject_sex'], right_on = ['year', 'subject_sex']).drop(['search_conducted'], axis = 1)\n",
+    "        found_and_all['Hit_rate'] = found_and_all['nb_find'] / found_and_all['nb_search'] * 100\n",
+    "        found_and_all['County'] = county\n",
+    "        found_and_all['City'] = city\n",
+    "        \n",
+    "    return found_and_all.query('contraband_found == True')\n",
+    "\n",
+    "def compute_hit_rate_one_city(path,county, city):\n",
+    "    df = load_data(path)\n",
+    "    df_ethnicity = compute_hit_rate_one_object(df,county,city)\n",
+    "    df_gender = compute_hit_rate_one_object(df,county,city, object = 'gender')\n",
+    "    return df_ethnicity, df_gender\n",
+    "\n",
+    "def compute_hit_rate_multiple_cities(path_to_folder):\n",
+    "    file_names = get_files_name(path_to_folder)\n",
+    "    all_city_ethnicity = compute_hit_rate_ethnicity(file_names[0], file_names[0][0:2], file_names[0][3:-4])\n",
+    "    for i in range(1,len(file_names)):\n",
+    "        all_city_ethnicity = compute_hit_rate_ethnicity(file_names[i],file_names[i][0:2] , file_names[0][3:-4])\n",
+    "    return hit_rate_ethnicity, hit_rate_gender\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"df = pd.read_csv('../data/city/tx_austin.csv.zip', compression = 'zip')\n",
+    "df_searched = df.query(\"search_conducted == True\")\n",
+    "df_searched[\"date\"] = pd.to_datetime(df_searched[\"date\"])\n",
+    "df_searched[\"year\"] = df_searched[\"date\"].dt.year\n",
+    "df_searched_cleaned = df_searched[['year', 'subject_race', 'search_conducted', 'contraband_found']]\"\"\""
    ]
   },
   {
@@ -58,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_hit_rate_ethnicity(path, county, city):    \n",
+    "\"\"\"def compute_hit_rate_ethnicity(path, county, city):    \n",
     "    df = pd.read_csv(path, compression = 'zip')\n",
     "    df_searched = df.query(\"search_conducted == True\")\n",
     "    df_searched[\"date\"] = pd.to_datetime(df_searched[\"date\"])\n",
@@ -70,7 +142,7 @@
     "    found_and_all['Hit_rate'] = found_and_all['nb_find'] / found_and_all['nb_search'] * 100\n",
     "    found_and_all['County'] = county\n",
     "    found_and_all['City'] = city\n",
-    "    return found_and_all.query('contraband_found == True')"
+    "    return found_and_all.query('contraband_found == True')\"\"\""
    ]
   },
   {
