hit rate update with slider

--- a/python/Hit_rate_data_processing.ipynb
+++ b/python/Hit_rate_data_processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,6 +30,7 @@
     "    df_searched = df.query(\"search_conducted == True\")\n",
     "    df_searched[\"date\"] = pd.to_datetime(df_searched[\"date\"])\n",
     "    df_searched[\"year\"] = df_searched[\"date\"].dt.year\n",
+    "    df_searched = df_searched.query('year >= 2009 and year <= 2016')\n",
     "    #df_searched['county_name'] = df_searched['county_name'].str[:-7]\n",
     "    return df_searched\n",
     "\n",
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +91,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2016., 2014., 2015., 2009., 2010., 2011., 2012., 2013.])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hit_rate_ethnicity.year.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,6 +120,13 @@
     "hit_rate_ethnicity_mean.to_csv('../data/city/all_hit_rate_ethnicity_mean.csv')\n",
     "hit_rate_gender_mean.to_csv('../data/city/all_hit_rate_gender_mean.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
